fix wrap issue on patient actions

--- a/src/app/Shared/PatientActionCard/index.css
+++ b/src/app/Shared/PatientActionCard/index.css
@@ -175,12 +175,9 @@
 }
 
 .patient-action-card__info-blocks {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
-  -webkit-flex-flow: row wrap;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .patient-action-card__info-block {
@@ -203,4 +200,3 @@
   padding: 0 $gutterLg $gutterSm $gutterLg;
   word-wrap: break-word;
 }
-
